--- a/app/src/main/res/layout/item_video_layout.xml
+++ b/app/src/main/res/layout/item_video_layout.xml
@@ -25,12 +25,13 @@
         <com.google.android.exoplayer2.ui.PlayerView
             android:id="@+id/video_player_view"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="250dp"
             app:show_buffering="when_playing"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintVertical_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:controller_layout_id="@layout/simple_player_custom_control_ui"
             app:layout_constraintBottom_toBottomOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
