--- a/app/src/main/res/layout/item_instagram_suggested_reels.xml
+++ b/app/src/main/res/layout/item_instagram_suggested_reels.xml
@@ -7,7 +7,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="200dp"
+        android:layout_width="170dp"
         android:layout_marginTop="15dp"
         android:layout_marginStart="15dp"
         android:layout_height="wrap_content">
@@ -42,6 +42,7 @@
                 app:layout_constraintVertical_bias="0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:resize_mode="fill"
                 app:controller_layout_id="@layout/simple_player_custom_control_ui"
                 app:layout_constraintBottom_toBottomOf="parent" />
 
