--- a/app/src/main/res/layout/fragment_facebook.xml
+++ b/app/src/main/res/layout/fragment_facebook.xml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.fragments.FacebookFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <data>
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="facebook " />
+        tools:context=".ui.fragments.FacebookFragment">
 
-</FrameLayout>
+        <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="@dimen/dim_15"
+        android:layout_marginTop="@dimen/dim_16"
+        app:layout_constraintDimensionRatio="4:2"
+        app:layout_constraintTop_toBottomOf="@id/til_Search"
+        app:layout_constraintStart_toStartOf="@id/startGuideline"
+        app:layout_constraintEnd_toEndOf="@id/end_guideline"
+        />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
