--- a/app/src/main/res/layout/fragment_facebook.xml
+++ b/app/src/main/res/layout/fragment_facebook.xml
@@ -15,14 +15,12 @@
         <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="@dimen/dim_15"
-        android:layout_marginTop="@dimen/dim_16"
-        app:layout_constraintDimensionRatio="4:2"
-        app:layout_constraintTop_toBottomOf="@id/til_Search"
-        app:layout_constraintStart_toStartOf="@id/startGuideline"
-        app:layout_constraintEnd_toEndOf="@id/end_guideline"
-        />
+        android:layout_height="match_parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+         />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
