scroll state added

--- a/app/src/main/res/layout/item_facebook_video.xml
+++ b/app/src/main/res/layout/item_facebook_video.xml
@@ -8,21 +8,31 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:background="@drawable/bg_grey_15dp_round"
+        android:background="#555252"
         android:layout_height="match_parent">
 
-        <com.google.android.exoplayer2.ui.PlayerView
-            android:id="@+id/video_player_view"
+<!--        <com.google.android.exoplayer2.ui.PlayerView-->
+<!--            android:id="@+id/video_player_view"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="500dp"-->
+<!--            app:show_buffering="when_playing"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintVertical_bias="0.5"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:resize_mode="fill"-->
+<!--            app:controller_layout_id="@layout/simple_player_custom_control_ui"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent" />-->
+
+        <ImageView
             android:layout_width="match_parent"
             android:layout_height="500dp"
-            app:show_buffering="when_playing"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:resize_mode="fill"
-            app:controller_layout_id="@layout/simple_player_custom_control_ui"
-            app:layout_constraintBottom_toBottomOf="parent" />
-
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.5"
+            android:src="@drawable/ic_launcher_background"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
