--- a/app/src/main/res/layout/fragment_facebook.xml
+++ b/app/src/main/res/layout/fragment_facebook.xml
@@ -16,6 +16,7 @@
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+            android:orientation="vertical"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
